--- a/web2py/applications/menuet/views/core/e_rest.html
+++ b/web2py/applications/menuet/views/core/e_rest.html
@@ -38,7 +38,7 @@
         <div class="col-sm-4">
             <div class="card">
                 <div class="card-header">
-                    <i class="fas fa-utensils"></i> Текущее активное меню
+                    <i class="fas fa-utensils"></i> Актуальные меню
                 </div>
                 <!-- /.panel-heading -->
                 <div class="card-block">
@@ -75,7 +75,6 @@
                     <i class="fas fa-utensil-spoon"></i> Новое меню
                 </div>
                 <div class="card-block">
-                    <form name="new_menu" id="new_menu">
                         <div class="form-group">
                             <input class="form-control" required name="rest_id" value="{{=rest.id}}" id="rest_id"
                                    type="hidden">
@@ -85,32 +84,32 @@
                         </div>
                         <div class="form-group">
                             <label class="font-weight-bold">Тип меню</label>
-                            <select class="form-control">
+                            <select id="menu_type" class="form-control">
                             {{for option_type in menu_types:}}
-                                <option>{{=option_type.f_name}}</option>
+                                <option value="{{=option_type.id}}">{{=option_type.f_name}}</option>
                             {{pass}}
                             </select>
                         </div>
                         <div class="form-group">
-                            <label class="font-weight-bold" id="season_checkbox"
-                                   >Сезонное?</label>
-                            <label class="checkbox"><input type="checkbox" onclick="show_hidden(this)" name="seosanal_checkbox">
+                            <label class="font-weight-bold" id="season_checkbox">Сезонное?</label>
+                            <label class="checkbox"><input type="checkbox" id="seosanal_checkbox"  name="seosanal_checkbox">
                         </div>
 
                         <div class="form-group" hidden id="seasonal_div">
                             <label class="font-weight-bold">Тип сезонного меню</label>
-                            <select class="form-control">
+                            <select id="menu_seosanl" class="form-control">
                             {{for option_seosanal in menu_seosanal:}}
-                                <option>{{=option_seosanal.f_name}}</option>
+                                <option>Выберите ...</option>
+                                <option value="{{=option_seosanal.id}}">{{=option_seosanal.f_name}}</option>
                             {{pass}}
                             </select>
                         </div>
                         <label class="font-weight-bold">Комментарий</label>
 
-                        <input class="form-control" required name="comment" placeholder="Необязательно" id="comment"
+                        <input class="form-control" name="comment" placeholder="Необязательно" id="comment"
                                type="text">
-                        <button type="submit" class="btn btn-primary" onclick="add_menu()">Создать!</button>
-                    </form>
+                        <button type="submit" id="add_menu" class="btn btn-primary" onclick="add_menu(this)">Создать!
+                        </button>
                 </div>
             </div>
         </div>
@@ -127,93 +126,101 @@
 <![endif]-->
 <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/suggestions-jquery@17.12.0/dist/js/jquery.suggestions.min.js"></script>
-<script type="text/javascript">function show_hidden(obj) {
-    if (document.getElementsByName('seosanal_checkbox')[0].checked === true) {
-        $('#seasonal_div').removeAttr("hidden");
-    } else {
-        $('#seasonal_div').fadeOut();
 
-    }
-}
+<script>
+    $(document).ready(function () {
+        $('#seosanal_checkbox').change(function () {
+            if (this.checked) {
+                $('#seasonal_div').removeAttr('hidden');
+                $('#seasonal_div').fadeIn('slow');
+            }
+            else
+                $('#seasonal_div').fadeOut('slow');
 
-
-function submitForm() {
-    var rest = {};
-    rest.name = document.getElementById('rest_name').value;
-    rest.addr = document.getElementById('rest_addr').value;
-    rest.is_network = document.getElementById("is_network").checked;
-
-    var DTO = {'rest': rest};
-    var data = JSON.stringify(DTO);
-
-    $.ajax({
-        type: 'POST',
-        url: '{{=URL('default', 'save_rest')}}',
-        scriptCharset: "utf-8",
-        contentType: "application/json",
-        dataType: 'json',
-        data: data
+        });
     });
-}
 
-$("#rest_addr").suggestions({
-    token: "bf69a05b6ce842dcd0cbc159648d19a8c49fdf33",
-    type: "ADDRESS",
-    count: 5,
-    onSelect: function (suggestion) {
-        console.log(suggestion);
+
+    function submitForm() {
+        var rest = {};
+        rest.name = document.getElementById('rest_name').value;
+        rest.addr = document.getElementById('rest_addr').value;
+        rest.is_network = document.getElementById("is_network").checked;
+
+        var DTO = {'rest': rest};
+        var data = JSON.stringify(DTO);
+
+        $.ajax({
+            type: 'POST',
+            url: '{{=URL('default', 'save_rest')}}',
+            scriptCharset: "utf-8",
+            contentType: "application/json",
+            dataType: 'json',
+            data: data
+        });
     }
-});
 
-
-function add_menu() {
-    var menu = {};
-    var rest = {};
-    rest.name = document.getElementById('rest_name').value;
-    rest.id = document.getElementById('rest_id').value;
-
-    var DTO = {'menu': menu, 'rest': rest};
-    var data = JSON.stringify(DTO);    //Using the toJSON plugin by Mark Gibson
-
-    $.ajax({
-        type: 'POST',
-        url: '{{=URL('default', 'save_menu')}}',
-        scriptCharset: "utf-8",
-        contentType: "application/json; charset=utf-8",
-        data: data,
-        dataType: 'json',
-        success: function (data) {
-            location.reload();
-        },
-        error: function (data) {
-            location.reload();
+    $("#rest_addr").suggestions({
+        token: "bf69a05b6ce842dcd0cbc159648d19a8c49fdf33",
+        type: "ADDRESS",
+        count: 5,
+        onSelect: function (suggestion) {
+            console.log(suggestion);
         }
     });
-}
 
-function delete_menu(menu) {
-    var rest = {};
-    rest.id = document.getElementById('rest_id').value;
-    var menu_t = {"menu": {"id": menu.id}, "rest": {"id": rest.id}};
-    var data = JSON.stringify(menu_t);
 
-    $.ajax({
-        type: 'POST',
-        url: '{{=URL('default', 'delete_menu')}}',
-        scriptCharset: "utf-8",
-        contentType: "application/json; charset=utf-8",
-        data: data,
-        dataType: 'json',
-        success: function (data) {
-            alert('Saved!');
-            location.reload();
-        },
-        error: function () {
-            alert('oh no, its failed again!');
-            location.reload();
-        }
-    });
-}
+    function add_menu(obj) {
+        var menu = {};
+        var rest = {};
+        rest.name = document.getElementById('rest_name').value;
+        rest.id = document.getElementById('rest_id').value;
+        menu.type = $( "#menu_type").find("option:selected" ).val();
+        menu.seosanal = $( "#menu_seosanl").find("option:selected" ).val();
+
+
+        var DTO = {'menu': menu, 'rest': rest};
+        var data = JSON.stringify(DTO);    //Using the toJSON plugin by Mark Gibson
+
+        $.ajax({
+            type: 'POST',
+            url: '{{=URL('default', 'save_menu')}}',
+            scriptCharset: "utf-8",
+            contentType: "application/json; charset=utf-8",
+            data: data,
+            dataType: 'json',
+            success: function (data) {
+                location.reload();
+            },
+            error: function (data) {
+                location.reload();
+            }
+        });
+    }
+
+    function delete_menu(menu) {
+        var rest = {};
+        rest.id = document.getElementById('rest_id').value;
+        var menu_t = {"menu": {"id": menu.id}, "rest": {"id": rest.id}};
+        var data = JSON.stringify(menu_t);
+
+        $.ajax({
+            type: 'POST',
+            url: '{{=URL('default', 'delete_menu')}}',
+            scriptCharset: "utf-8",
+            contentType: "application/json; charset=utf-8",
+            data: data,
+            dataType: 'json',
+            success: function (data) {
+                alert('Saved!');
+                location.reload();
+            },
+            error: function () {
+                alert('oh no, its failed again!');
+                location.reload();
+            }
+        });
+    }
 
 
 </script>
