--- a/web2py/applications/menuet/views/core/e_menu.html
+++ b/web2py/applications/menuet/views/core/e_menu.html
@@ -3,37 +3,45 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-sm-5">
-            <div class="card">
-                <div class="card-header">
-                    <i class="fas fa-utensil-spoon"></i> {{=menu.name}}
-                </div>
-                <div class="card-block">
-                    <form name="new_rest" id="new_rest">
-                        <div class="form-group">
-                            <label class="font-weight-bold">Активно </label>
-                            <input class="form-control" required name="rest_name" value="{{=menu.name}}" id="rest_name">
-                            <p class="text-muted"><em>Например: Чайхона №1</em></p>
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" id="is_network" {{=menu.f_current}}> Текущее ?
-                            </label>
-                        </div>
-                        <div class="form-group">
-                            <label class="font-weight-bold">Адрес ресторана</label>
-                            <div class="input-group">
-                                <span class="input-group-addon"><i
-                                        class="fas fa-map-marker-alt"></i></span>
-                                <input class="form-control" required name="rest_addr" id="rest_addr"
-                                       value="{{=rest.addr}}"
-                                       onchange="get_addr()"></div>
-                            <p class="text-muted"><em>Например: Москва, ул. </em></p>
-                        </div>
-                        <button type="submit" class="btn btn-primary" onclick="submitForm()">Сохранить!</button>
-                    </form>
+        <div class="card">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 text-center">
+                        <p class="font-weight-bold">
+                        <h1>{{=menu.f_name}}</h1>
+                        <br></div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="card-columns">
+                <div class="card">
+                {{for item in menu_items:}}
+                    <div class="card-header">
+                    {{=item.name}}
+                    </div>
+                    <div class="card-block">
+                    {{for ingr in item.ingrs:}}
+                        <div class="form-group">
+                        {{ingr.name}}
+                        </div>
+                    {{pass}}
+                    </div>
+                    <div class="card-footer">
+                        <input value="{{=item.id}}" type="hidden">
+                        <input class="btn btn-primary" value="Поправить" onclick="go_to_item(this)">
+                    </div>
+                </div>
+            {{pass}}
+            </div>
+        </div>
+    </div>
 </div>
+
+<script>
+    function go_to_item(obj) {
+        window.location = '{{=URL("core", "e_item", vars=dict(m_id=request.vars.m_id))}}' + '&itm_id=' + obj
+    }
+</script>
