--- a/web2py/applications/menuet/views/core/a_item.html
+++ b/web2py/applications/menuet/views/core/a_item.html
@@ -133,7 +133,7 @@
                         <em class="text-muted">Например хуйцы с гречей</em>
                     </div>
                     <div class="form-group input-group">
-                        <span class="input-group-addon"><i class="fas fa-ruble-sign"></i> </span>
+                        <span class="input-group-addon"><i class="fas fa-ruble-sign" style="width: 20px;height: 16px"></i> </span>
                         <input type="number" id="item_price" class="form-control" placeholder="Цена">
                     </div>
                     <div class="form-group input-group">
@@ -155,10 +155,7 @@
 
             </div>
         </div>
-        <div class="ui-widget">
-            <label for="birds">Birds: </label>
-            <input id="birds" size="50">
-        </div>
+
     </div>
 </div>
 <script>
