--- a/web2py/applications/menuet/views/core/a_item.html
+++ b/web2py/applications/menuet/views/core/a_item.html
@@ -152,7 +152,9 @@
                         <em class="text-muted">Греча, хуйцы. Через зпт</em>
                     </div>
                 </div>
-
+<div class="card-footer">
+    <input class="btn btn-primary" type="button" value="Добавить!">
+</div>
             </div>
         </div>
 
