--- a/web2py/applications/menuet/views/core/e_rest.html
+++ b/web2py/applications/menuet/views/core/e_rest.html
@@ -17,7 +17,11 @@
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" id="is_network" checked="{{=rest.is_network}}"> Сетевой ?
+                            {{if rest.is_network:}}
+                                <input type="checkbox" id="is_network" checked> Сетевой ?
+                            {{else:}}
+                                <input type="checkbox" id="is_network"> Сетевой ?
+                            {{pass}}
                             </label>
                         </div>
                         <div class="form-group">
@@ -30,7 +34,7 @@
                                        onchange="get_addr()"></div>
                             <p class="text-muted"><em>Например: Москва, ул. </em></p>
                         </div>
-                        <button type="submit" class="btn btn-primary" onclick="submitForm()">Сохранить!</button>
+                        <button type="button" class="btn btn-primary" onclick="submitForm()">Сохранить!</button>
                     </form>
                 </div>
             </div>
@@ -75,28 +79,27 @@
                     <i class="fas fa-utensil-spoon"></i> Новое меню
                 </div>
                 <div class="card-block">
-                        <div class="form-group">
-                            <input class="form-control" required name="rest_id" value="{{=rest.id}}" id="rest_id"
-                                   type="hidden">
-                            <input class="form-control" required name="rest_name" value="{{=rest.name}}" id="rest_name"
-                                   type="hidden">
+                    <div class="form-group">
+                        <input class="form-control" required name="rest_id" value="{{=rest.id}}" id="rest_id"
+                               type="hidden">
+                        <input class="form-control" required name="rest_name" value="{{=rest.name}}" id="rest_name"
+                               type="hidden">
 
-                        </div>
-                        <div class="form-group">
-                            <label class="font-weight-bold">Тип меню</label>
-                            <select id="menu_type" class="form-control">
-                            {{for option_type in menu_types:}}
-                                <option value="{{=option_type.id}}">{{=option_type.f_name}}</option>
-                            {{pass}}
-                            </select>
-                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="font-weight-bold">Тип меню</label>
+                        <select id="menu_type" class="form-control">
+                        {{for option_type in menu_types:}}
+                            <option value="{{=option_type.id}}">{{=option_type.f_name}}</option>
+                        {{pass}}
+                        </select>
+                    </div>
 
-                        <label class="font-weight-bold">Комментарий</label>
+                    <label class="font-weight-bold">Комментарий</label>
 
-                        <input class="form-control" name="comment" placeholder="Необязательно" id="comment"
-                               type="text">
-                        <button type="submit" id="add_menu" class="btn btn-primary" onclick="add_menu(this)">Создать!
-                        </button>
+                    <input class="form-control" name="comment" placeholder="Необязательно" id="comment"
+                           type="text">
+                    <input type="button" id="add_menu" class="btn btn-primary" onclick="add_menu()" value="Создать!">
                 </div>
             </div>
         </div>
@@ -132,7 +135,7 @@
         var rest = {};
         rest.name = document.getElementById('rest_name').value;
         rest.addr = document.getElementById('rest_addr').value;
-        rest.is_network = document.getElementById("is_network").checked;
+        rest.is_network = document.getElementById('is_network').checked;
         rest.r_id = "{{=request.vars.r_id}}";
 
         var DTO = {'rest': rest};
@@ -144,7 +147,15 @@
             scriptCharset: "utf-8",
             contentType: "application/json",
             dataType: 'json',
-            data: data
+            data: data,
+            success: function (data) {
+                window.location.reload()
+
+            },
+            error: function (data) {
+                window.location.reload()
+
+            }
         });
     }
 
@@ -158,12 +169,12 @@
     });
 
 
-    function add_menu(obj) {
+    function add_menu() {
         var menu = {};
         var rest = {};
         rest.name = document.getElementById('rest_name').value;
         rest.id = document.getElementById('rest_id').value;
-        menu.type = $( "#menu_type").find("option:selected" ).val();
+        menu.type = $("#menu_type").find("option:selected").val();
         menu.comment = document.getElementById('comment').value;
 
         var DTO = {'menu': menu, 'rest': rest};
