--- a/web2py/applications/menuet/views/layout.html
+++ b/web2py/applications/menuet/views/layout.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="{{=URL('static','css/bootstrap-multiselect.css')}}"/>
 
     <link rel="stylesheet" href="{{=URL('static','css/bootstrap.min.css')}}"/>
+    <link rel="stylesheet" href="{{=URL('static','css/autocomplete.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/web2py-bootstrap4.css')}}"/>
     <link rel="shortcut icon" href="{{=URL('static','images/favicon.ico')}}" type="image/x-icon">
     <link rel="apple-touch-icon" href="{{=URL('static','images/favicon.png')}}">
