--- a/web2py/applications/menuet/views/core/e_menu.html
+++ b/web2py/applications/menuet/views/core/e_menu.html
@@ -42,8 +42,7 @@
                     {{for ingr in item.ingrs:}}
                         <div class="form-group">
                             <label class="font-weight-bold">{{=ingr.name}}</label>
-                            <em class="text-muted">{{=ingr.qty}}</em>
-                            <em class="text-muted">{{=ingr.unit.f_name}}</em>
+                            <em class="text-muted">{{=ingr.unit}}</em>
                         </div>
                     {{pass}}
                     </div>
