--- a/web2py/applications/menuet/views/core/rest.html
+++ b/web2py/applications/menuet/views/core/rest.html
@@ -139,7 +139,7 @@
         }
     }
 
-    function e_menu(url, r_id) {
+    function e_menu(r_id) {
         var rest = {};
         rest.r_id = r_id;
         var DTO = {'rest': rest};
