--- a/web2py/applications/menuet/views/layout.html
+++ b/web2py/applications/menuet/views/layout.html
@@ -25,8 +25,10 @@
     <!-- Include the plugin's CSS and JS: -->
     <script src="{{=URL('static','js/bootstrap-multiselect.js')}}"></script>
     <link rel="stylesheet" href="{{=URL('static','css/bootstrap-multiselect.css')}}"/>
-
+    <script src="{{=URL('static', 'js/tether.min.js')}}"></script>
     <link rel="stylesheet" href="{{=URL('static','css/bootstrap.min.css')}}"/>
+    <link rel="stylesheet" href="{{=URL('static','css/tether.min.css')}}"/>
+
     <link rel="stylesheet" href="{{=URL('static','css/autocomplete.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/web2py-bootstrap4.css')}}"/>
     <link rel="shortcut icon" href="{{=URL('static','images/favicon.ico')}}" type="image/x-icon">
